--- a/eigeneApp/public/index.html
+++ b/eigeneApp/public/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="quiz-wrapper">
     <div class="quiz-card">
-      <h1>Quiz</h1>
+      <h1>Quiz von Jonas</h1>
       <p id="question"></p>
       <div id="options" class="options-grid"></div>
       <p id="score">Punktestand: 0</p>
